w-aks-intro/resources/kubernetes/disk-lrs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lrsdisk
spec:
  selector:
    matchLabels:
      app: lrsdisk
  template:
    metadata:
      labels:
        app: lrsdisk
        demo: disks
    spec:
      containers:
      - name: nginx
        image: nginx
        command: ["/bin/bash"]
        args: ["-c", "while true; do date | tee -a /data/myfile.txt; sleep 15; done"]
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: lrsdisk
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - "northeurope-1"
